add bgjobs to dashboard, alerts and reports
